增加判断，如果设置的时间小于等于当前时间，则提示重新设置

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div>时间设置</div>
         <div class="settime">
           <div class="timeitem">
-            <input type="text" placeholder="时" id="hour">时
+            <input type="text" placeholder="时" id="hour" autocomplete="off">时
           </div>
           <div class="timeitem">
-            <input type="text" placeholder="分" id="minute">分
+            <input type="text" placeholder="分" id="minute" autocomplete="off">分
           </div>
           <!-- <div class="timeitem">
             <input type="text" placeholder="秒" id="second">秒
